# ori-kinematics

./: .gitignore  0001-0250.mkv  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  cmake_install.cmake  cube_out.json  miura_out.json
.github/workflows/: ci.yml
Documentation/: commands.tex  proposal.aux  proposal.bbl  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.md  proposal.tex  refs.bib
Documentation/architecture/: class  state  test.txt
Documentation/proposal/: main.fdb_latexmk  main.fls  main.tex
Documentation/report/: commands.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  refs.bib  title.tex
Documentation/report/Chapters/: 0Abstract.tex  1Introduction.tex  2Body.tex  3Results.tex  4Conclusion.tex  methodology.tex
Documentation/requirements/: func.md
cmake/: gnu_warning_flags.cmake
example/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  create_cube.cpp  cube  cube output.json  cube.json  miura.cpp  miura.json  out.mp40001-0010.mkv  out.mp40001-0100.mkv
ori_ken/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ori_ken/include/: body.hpp  cblas.h  edge.hpp  jsonParser.hpp  lapacke.h  linAlg.hpp  node.hpp  ori_ken.hpp  structure.hpp  unit_test_framework.hpp
ori_ken/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  body.cpp  cmake_install.cmake  constraints.cpp  jsonParser.cpp  linAlg.cpp  node.cpp  structure.cpp  visualizer.py
ori_ken/tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CmakeLists.txt  Makefile  cmake_install.cmake  simple_test.cpp  verification  verification_tests.cpp
ori_kin/include/: body.hpp  cblas.h  edge.hpp  jsonParser.hpp  lapacke.h  linAlg.hpp  node.hpp  ori_kin.hpp  structure.hpp  targetVelocity.hpp
ori_kin/src/: CMakeLists.txt  body.cpp  constraints.cpp  edge.cpp  jsonParser.cpp  linAlg.cpp  node.cpp  structure.cpp  targetVelocity.cpp  visualizer.py
ori_kin/tests/: CMakeLists.txt  constraints_ut.cpp  cube.json  jsonTest.json  jsonTests.cpp  linAlg_ut.cpp  meshing_ut.cpp  meshing_verif.cpp  simulate_ut.cpp  testMesh.json  unit_test_framework.hpp  unit_tests.cpp  velocity_ut.cpp  velocity_verif.cpp  verification_tests.cpp
tests/: verification_tests.cpp
